<resources>
    <string name="app_name">AR Measurement</string>
    <string name="move_to_find_surface">Move around to find a surface</string>
    <string name="place_point">Place Point</string>
    <string name="place_point_count">Place %1$d / %2$d</string>
    <string name="measurement_complete">Complete</string>
    <string name="distance_result">Distance: %1$s cm</string>
    <string name="area_result">Area: %1$s cm²</string>
    <string name="mode_distance">Distance</string>
    <string name="mode_area">2D Area</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="show_plane_guide">Plane Guide</string>
    <string name="enable_instant_placement">Instant Placement</string>
    <string name="enable_depth_occlusion">Depth Occlusion</string>
</resources>
