<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchPlaneDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/show_plane_guide" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchInstantPlacement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/enable_instant_placement" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDepthOcclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/enable_depth_occlusion" />

</LinearLayout>
